--- a/lab-01/6. Semantics/page1.html
+++ b/lab-01/6. Semantics/page1.html
@@ -1,147 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="utf-8">
-	<title>Page 1</title>
-	<link rel="stylesheet" href="css/style.css">
-</head>
-<body>
-	<div>
-		<!--Header-->
+	<head>
+		<meta charset="utf-8" />
+		<title>Page 1</title>
+		<link rel="stylesheet" href="css/style.css" />
+	</head>
+	<body>
 		<div>
-			<h1>My Cool Site</h1>
+			<!--Header-->
+			<header>
+				<h1>My Cool Site</h1>
 
-			<div>
-				<ul>
-					<li><a href="#" title="Home">Home</a></li>
-					<li><a href="#animals" title="Animals">Animals</a></li>
-					<li><a href="#foods" title="Foods">Foods</a></li>
-					<li><a href="#about" title="About">About</a></li>
-				</ul>
-			</div>
+				<nav>
+					<ul>
+						<li><a href="#" title="Home">Home</a></li>
+						<li><a href="#animals" title="Animals">Animals</a></li>
+						<li><a href="#foods" title="Foods">Foods</a></li>
+						<li><a href="#about" title="About">About</a></li>
+					</ul>
+				</nav>
+			</header>
+			<!--END Header-->
+
+			<section>
+				<!--Animals-->
+				<section>
+					<h2 id="animals">Animals</h2>
+
+					<section>
+						<!--Cats-->
+						<section>
+							<h3>Cats</h3>
+
+							<!--British Cat-->
+							<article>
+								<h4>British Blue</h4>
+								<img src="images/BritishBlue.jpg" alt="British Blue" />
+
+								<p>
+									Британската късокосместа котка е порода домашна котка произхождаща от
+									Великобритания. Мъжките екземпляри тежат от 5-10 кг, а женските 5-7 кг. Има къса
+									гъста козина и също така гъст подкосъм.
+								</p>
+							</article>
+							<!--END British Cat-->
+
+							<!--Russian Cat-->
+							<article>
+								<h4>Russian Blue</h4>
+								<img src="images/RussianBlue.jpg" alt="Russian Blue" />
+
+								<p>
+									Руската синя котка е късокосместа порода домашна котка, произхождаща от Русия,
+									близо до град Архангелск.
+									<sup><a href="#russian">[1]</a></sup>
+									В Англия, където е и призната, е донесена около 1960 от архангелски моряци.
+								</p>
+
+								<br />
+								<hr />
+								<br />
+
+								<section>
+									<h5>Sources</h5>
+									<ol>
+										<li id="#russian">
+											Alderton, David. The Eyewitness Handbook of Cats. Dorling Kindersley, 1992.
+											ISBN 1-56458-070-9. с. p. 182.
+										</li>
+									</ol>
+								</section>
+							</article>
+							<!--END British Cat-->
+						</section>
+						<!--END Cats-->
+
+						<!--Dog-->
+						<section>
+							<h3>Dogs</h3>
+
+							<!--Husky-->
+							<article>
+								<h4>Huskey</h4>
+								<img src="images/Husky.jpg" alt="Husky" />
+
+								<p>
+									Сибирското хъски е порода куче, която произлиза от източната част на Сибир.
+									Сибирските хъскита са първоначално селектирани от чукчите в североизточна Азия,
+									по-късно внесени от търговци в Аляска, САЩ и Канада.
+								</p>
+							</article>
+							<!--END Husky-->
+						</section>
+						<!--END Dog-->
+					</section>
+				</section>
+				<!--END Animals-->
+
+				<!--Foods-->
+				<section>
+					<h2 id="foods">Foods</h2>
+
+					<section>
+						<!--Chocolates-->
+						<section>
+							<h3>Chocolates</h3>
+
+							<!--Dark Chocolate-->
+							<article>
+								<h4>Dark Chocolate</h4>
+								<img src="images/DarkChocolate.jpg" alt="Dark Chocolate" />
+
+								<p>
+									Натуралният шоколад е с високо съдържание на какао. В зависимост от видът, може да
+									варира от 70 до над 90%.
+								</p>
+							</article>
+							<!--END Dark Chocolate-->
+
+							<!--White Chocolate-->
+							<article>
+								<h4>White Chocolate</h4>
+								<img src="images/WhiteChocolate.jpg" alt="White Chocolate" />
+
+								<p>
+									Белият шоколад е производно на шоколада, което официално не може да бъде наречено
+									шоколад. Характеризира се с бледо жълт цвят, подобен на слонова кост.
+								</p>
+							</article>
+							<!--END White Chocolate-->
+						</section>
+						<!--END Chocolates-->
+					</section>
+				</section>
+				<!--END Foods-->
+			</section>
+
+			<!--Footer-->
+			<footer>
+				<p id="about">Copyright &copy; 2015</p>
+			</footer>
+			<!--END Footer-->
 		</div>
-		<!--END Header-->
-
-		<div>
-			<!--Animals-->
-			<div>
-				<h2 id="animals">Animals</h2>
-
-				<div>
-					<!--Cats-->
-					<div>
-						<h3>Cats</h3>
-
-						<!--British Cat-->
-						<div>
-							<h4>British Blue</h4>
-							<img src="images/BritishBlue.jpg" alt="British Blue">
-
-							<p>
-								Британската късокосместа котка е порода домашна котка произхождаща от Великобритания.
-								Мъжките екземпляри тежат от 5-10 кг, а женските 5-7 кг. Има къса гъста козина и също
-								така гъст подкосъм.
-							</p>
-						</div>
-						<!--END British Cat-->
-
-						<!--Russian Cat-->
-						<div>
-							<h4>Russian Blue</h4>
-							<img src="images/RussianBlue.jpg" alt="Russian Blue">
-
-							<p>
-								Руската синя котка е късокосместа порода домашна котка, произхождаща от Русия, близо до
-								град Архангелск.
-								<sup><a href="#russian">[1]</a></sup>
-								В Англия, където е и призната, е донесена около 1960 от архангелски
-								моряци.
-							</p>
-
-							<br>
-							<hr>
-							<br>
-
-							<div>
-								<h5>Sources</h5>
-								<ol>
-									<li id="#russian">Alderton, David. The Eyewitness Handbook of Cats. Dorling
-										Kindersley, 1992. ISBN 1-56458-070-9. с. p. 182.
-									</li>
-								</ol>
-							</div>
-						</div>
-						<!--END British Cat-->
-					</div>
-					<!--END Cats-->
-
-					<!--Dog-->
-					<div>
-						<h3>Dogs</h3>
-
-						<!--Husky-->
-						<div>
-							<h4>Huskey</h4>
-							<img src="images/Husky.jpg" alt="Husky">
-
-							<p>
-								Сибирското хъски е порода куче, която произлиза от източната част на Сибир.
-								Сибирските хъскита са първоначално селектирани от чукчите в североизточна Азия,
-								по-късно внесени от търговци в Аляска, САЩ и Канада.
-							</p>
-						</div>
-						<!--END Husky-->
-					</div>
-					<!--END Dog-->
-				</div>
-			</div>
-			<!--END Animals-->
-
-			<!--Foods-->
-			<div>
-				<h2 id="foods">Foods</h2>
-
-				<div>
-					<!--Chocolates-->
-					<div>
-						<h3>Chocolates</h3>
-
-						<!--Dark Chocolate-->
-						<div>
-							<h4>Dark Chocolate</h4>
-							<img src="images/DarkChocolate.jpg" alt="Dark Chocolate"/>
-
-							<p>
-								Натуралният шоколад е с високо съдържание на какао. В зависимост от видът, може да
-								варира от 70 до над 90%.
-							</p>
-						</div>
-						<!--END Dark Chocolate-->
-
-						<!--White Chocolate-->
-						<div>
-							<h4>White Chocolate</h4>
-							<img src="images/WhiteChocolate.jpg" alt="White Chocolate"/>
-
-							<p>
-								Белият шоколад е производно на шоколада, което официално не може да бъде наречено
-								шоколад. Характеризира се с бледо жълт цвят, подобен на слонова кост.
-							</p>
-						</div>
-						<!--END White Chocolate-->
-					</div>
-					<!--END Chocolates-->
-				</div>
-			</div>
-			<!--END Foods-->
-		</div>
-
-		<!--Footer-->
-		<div>
-			<p id="about">Copyright &copy; 2015</p>
-		</div>
-		<!--END Footer-->
-	</div>
-
-</body>
+	</body>
 </html>
