--- a/lab-01/5. Advanced form/task-5.html
+++ b/lab-01/5. Advanced form/task-5.html
@@ -13,7 +13,7 @@
 				<input type="text" name="username" id="username" placeholder="Username" /><br />
 
 				<label for="password">Password</label>
-				<input type="text" name="password" id="password" placeholder="Password" /><br />
+				<input type="password" name="password" id="password" placeholder="Password" /><br />
 			</fieldset>
 			<fieldset>
                 <legend>Personal information</legend>
