fix repeating id, incorrect structure

--- a/lab-01/7. Broken HTML/index.html
+++ b/lab-01/7. Broken HTML/index.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<title>My Title</title>
 	</head>
-	<body id="css-zen-garden">
+	<body>
 		<header>
 			<h1>My Title</h1>
 		</header>
@@ -12,7 +12,7 @@
 			<section class="intro" id="css-zen-garden">
 				<header>
 					<h1>CSS Zen Garden</h1>
-					<h2>The Beauty of <abbr disabled title="Cascading Style Sheets">CSS</abbr> Design</h2>
+					<h2>The Beauty of <abbr title="Cascading Style Sheets">CSS</abbr> Design</h2>
 				</header>
 			</section>
 			<div class="summary" id="zen-summary" role="article">
@@ -98,7 +98,7 @@
 					<p>
 						Download the sample
 						<a href="/examples/index" title="This page's source HTML code, not to be modified."
-							><p>HTML</p></a
+							>HTML</a
 						>
 						and
 						<a href="/examples/style.css" title="This page's sample CSS, the file you may modify."
@@ -128,7 +128,7 @@
 					</p>
 				</div>
 
-				<div class="requirements" id="zen-requirements" role="article" action="index.php">
+				<div class="requirements" id="zen-requirements" role="article">
 					<h3>Requirements</h3>
 					<p>
 						Where possible, we would like to see mostly
@@ -288,7 +288,7 @@
 				</div>
 			</aside>
 		</div>
-		<footer role="banner">
+		<footer>
 			<a
 				href="http://validator.w3.org/check/referer"
 				title="Check the validity of this site’s HTML"
