--- a/lab-01/7. Broken HTML/index.html
+++ b/lab-01/7. Broken HTML/index.html
@@ -18,16 +18,20 @@
 			<div class="summary" id="zen-summary" role="article">
 				<p>
 					A demonstration of what can be accomplished through
-					<abbr title="Cascading Style Sheets">CSS</abbr>-based design. Select any style sheet from
-					the list to load it into this page.
+					<abbr title="Cascading Style Sheets">CSS</abbr>-based design. Select any style
+					sheet from the list to load it into this page.
 				</p>
 				<p>
 					Download the example
-					<a href="/examples/index" title="This page's source HTML code, not to be modified."
+					<a
+						href="/examples/index"
+						title="This page's source HTML code, not to be modified."
 						>html file</a
 					>
 					and
-					<a href="/examples/style.css" title="This page's sample CSS, the file you may modify."
+					<a
+						href="/examples/style.css"
+						title="This page's sample CSS, the file you may modify."
 						>css file</a
 					>
 				</p>
@@ -41,14 +45,15 @@
 					<abbr title="Cascading Style Sheets">CSS</abbr> support, and abandoned browsers.
 				</p>
 				<p>
-					We must clear the mind of the past. Web enlightenment has been achieved thanks to the
-					tireless efforts of folk like the <abbr title="World Wide Web Consortium">W3C</abbr>,
+					We must clear the mind of the past. Web enlightenment has been achieved thanks
+					to the tireless efforts of folk like the
+					<abbr title="World Wide Web Consortium">W3C</abbr>,
 					<abbr title="Web Standards Project">WaSP</abbr>, and the major browser creators.
 				</p>
 				<p>
-					The CSS Zen Garden invites you to relax and meditate on the important lessons of the
-					masters. Begin to see with clarity. Learn to use the time-honored techniques in new and
-					invigorating fashion. Become one with the web.
+					The CSS Zen Garden invites you to relax and meditate on the important lessons of
+					the masters. Begin to see with clarity. Learn to use the time-honored techniques
+					in new and invigorating fashion. Become one with the web.
 				</p>
 			</div>
 
@@ -57,30 +62,33 @@
 					<h3>So What is This About?</h3>
 					<p>
 						There is a continuing need to show the power of
-						<abbr title="Cascading Style Sheets">CSS</abbr>. The Zen Garden aims to excite, inspire,
-						and encourage participation. To begin, view some of the existing designs in the list.
-						Clicking on any one will load the style sheet into this very page. The
-						<abbr title="HyperText Markup Language">HTML</abbr> remains the same, the only thing
-						that has changed is the external <abbr title="Cascading Style Sheets">CSS</abbr> file.
-						Yes, really.
+						<abbr title="Cascading Style Sheets">CSS</abbr>. The Zen Garden aims to
+						excite, inspire, and encourage participation. To begin, view some of the
+						existing designs in the list. Clicking on any one will load the style sheet
+						into this very page. The
+						<abbr title="HyperText Markup Language">HTML</abbr> remains the same, the
+						only thing that has changed is the external
+						<abbr title="Cascading Style Sheets">CSS</abbr> file. Yes, really.
 					</p>
 					<p>
-						<abbr title="Cascading Style Sheets">CSS</abbr> allows complete and total control over
-						the style of a hypertext document. The only way this can be illustrated in a way that
-						gets people excited is by demonstrating what it can truly be, once the reins are placed
-						in the hands of those able to create beauty from structure. Designers and coders alike
-						have contributed to the beauty of the web; we can always push it further.
+						<abbr title="Cascading Style Sheets">CSS</abbr> allows complete and total
+						control over the style of a hypertext document. The only way this can be
+						illustrated in a way that gets people excited is by demonstrating what it
+						can truly be, once the reins are placed in the hands of those able to create
+						beauty from structure. Designers and coders alike have contributed to the
+						beauty of the web; we can always push it further.
 					</p>
 				</div>
 
 				<div class="participation" id="zen-participation" role="article">
 					<h3>Participation</h3>
 					<p>
-						Strong visual design has always been our focus. You are modifying this page, so strong
-						<abbr title="Cascading Style Sheets">CSS</abbr> skills are necessary too, but the
-						example files are commented well enough that even
-						<abbr title="Cascading Style Sheets">CSS</abbr> novices can use them as starting points.
-						Please see the
+						Strong visual design has always been our focus. You are modifying this page,
+						so strong
+						<abbr title="Cascading Style Sheets">CSS</abbr> skills are necessary too,
+						but the example files are commented well enough that even
+						<abbr title="Cascading Style Sheets">CSS</abbr> novices can use them as
+						starting points. Please see the
 						<a
 							href="http://www.mezzoblue.com/zengarden/resources/"
 							title="A listing of CSS-related resources"
@@ -91,40 +99,46 @@
 					</p>
 					<p>
 						You may modify the style sheet in any way you wish, but not the
-						<abbr title="HyperText Markup Language">HTML</abbr>. This may seem daunting at first if
-						you’ve never worked this way before, but follow the listed links to learn more, and use
-						the sample files as a guide.
+						<abbr title="HyperText Markup Language">HTML</abbr>. This may seem daunting
+						at first if you’ve never worked this way before, but follow the listed links
+						to learn more, and use the sample files as a guide.
 					</p>
 					<p>
 						Download the sample
-						<a href="/examples/index" title="This page's source HTML code, not to be modified."
+						<a
+							href="/examples/index"
+							title="This page's source HTML code, not to be modified."
 							>HTML</a
 						>
 						and
-						<a href="/examples/style.css" title="This page's sample CSS, the file you may modify."
+						<a
+							href="/examples/style.css"
+							title="This page's sample CSS, the file you may modify."
 							>CSS</a
 						>
-						to work on a copy locally. Once you have completed your masterpiece (and please, don’t
-						submit half-finished work) upload your
-						<abbr title="Cascading Style Sheets">CSS</abbr> file to a web server under your control.
+						to work on a copy locally. Once you have completed your masterpiece (and
+						please, don’t submit half-finished work) upload your
+						<abbr title="Cascading Style Sheets">CSS</abbr> file to a web server under
+						your control.
 						<a
 							href="http://www.mezzoblue.com/zengarden/submit/"
 							title="Use the contact form to send us your CSS file"
 							>Send us a link</a
 						>
-						to an archive of that file and all associated assets, and if we choose to use it we will
-						download it and place it on our server.
+						to an archive of that file and all associated assets, and if we choose to
+						use it we will download it and place it on our server.
 					</p>
 				</div>
 
 				<div class="benefits" id="zen-benefits" role="article">
 					<h3>Benefits</h3>
 					<p>
-						Why participate? For recognition, inspiration, and a resource we can all refer to
-						showing people how amazing <abbr title="Cascading Style Sheets">CSS</abbr> really can
-						be. This site serves as equal parts inspiration for those working on the web today,
-						learning tool for those who will be tomorrow, and gallery of future techniques we can
-						all look forward to.
+						Why participate? For recognition, inspiration, and a resource we can all
+						refer to showing people how amazing
+						<abbr title="Cascading Style Sheets">CSS</abbr> really can be. This site
+						serves as equal parts inspiration for those working on the web today,
+						learning tool for those who will be tomorrow, and gallery of future
+						techniques we can all look forward to.
 					</p>
 				</div>
 
@@ -132,35 +146,40 @@
 					<h3>Requirements</h3>
 					<p>
 						Where possible, we would like to see mostly
-						<abbr title="Cascading Style Sheets, levels 1 and 2">CSS 1 &amp; 2</abbr> usage.
-						<abbr title="Cascading Style Sheets, levels 3 and 4">CSS 3 &amp; 4</abbr> should be
-						limited to widely-supported elements only, or strong fallbacks should be provided. The
-						CSS Zen Garden is about functional, practical
-						<abbr title="Cascading Style Sheets">CSS</abbr> and not the latest bleeding-edge tricks
-						viewable by 2% of the browsing public. The only real requirement we have is that your
+						<abbr title="Cascading Style Sheets, levels 1 and 2">CSS 1 &amp; 2</abbr>
+						usage.
+						<abbr title="Cascading Style Sheets, levels 3 and 4">CSS 3 &amp; 4</abbr>
+						should be limited to widely-supported elements only, or strong fallbacks
+						should be provided. The CSS Zen Garden is about functional, practical
+						<abbr title="Cascading Style Sheets">CSS</abbr> and not the latest
+						bleeding-edge tricks viewable by 2% of the browsing public. The only real
+						requirement we have is that your
 						<abbr title="Cascading Style Sheets">CSS</abbr> validates.
 					</p>
 					<p>
 						Luckily, designing this way shows how well various browsers have implemented
-						<abbr title="Cascading Style Sheets">CSS</abbr> by now. When sticking to the guidelines
-						you should see fairly consistent results across most modern browsers. Due to the sheer
-						number of user agents on the web these days — especially when you factor in mobile —
-						pixel-perfect layouts may not be possible across every platform. That’s okay, but do
-						test in as many as you can. Your design should work in at least IE9+ and the latest
-						Chrome, Firefox, iOS and Android browsers (run by over 90% of the population).
+						<abbr title="Cascading Style Sheets">CSS</abbr> by now. When sticking to the
+						guidelines you should see fairly consistent results across most modern
+						browsers. Due to the sheer number of user agents on the web these days —
+						especially when you factor in mobile — pixel-perfect layouts may not be
+						possible across every platform. That’s okay, but do test in as many as you
+						can. Your design should work in at least IE9+ and the latest Chrome,
+						Firefox, iOS and Android browsers (run by over 90% of the population).
 					</p>
 					<p>
-						We ask that you submit original artwork. Please respect copyright laws. Please keep
-						objectionable material to a minimum, and try to incorporate unique and interesting
-						visual themes to your work. We’re well past the point of needing another garden-related
-						design.
+						We ask that you submit original artwork. Please respect copyright laws.
+						Please keep objectionable material to a minimum, and try to incorporate
+						unique and interesting visual themes to your work. We’re well past the point
+						of needing another garden-related design.
 					</p>
 					<p>
-						This is a learning exercise as well as a demonstration. You retain full copyright on
-						your graphics (with limited exceptions, see
-						<a href="http://www.mezzoblue.com/zengarden/submit/guidelines/">submission guidelines</a
-						>), but we ask you release your <abbr title="Cascading Style Sheets">CSS</abbr> under a
-						Creative Commons license identical to the
+						This is a learning exercise as well as a demonstration. You retain full
+						copyright on your graphics (with limited exceptions, see
+						<a href="http://www.mezzoblue.com/zengarden/submit/guidelines/"
+							>submission guidelines</a
+						>), but we ask you release your
+						<abbr title="Cascading Style Sheets">CSS</abbr> under a Creative Commons
+						license identical to the
 						<a
 							href="http://creativecommons.org/licenses/by-nc-sa/3.0/"
 							title="View the Zen Garden's license information."
@@ -169,8 +188,9 @@
 						so that others may learn from your work.
 					</p>
 					<p role="contentinfo">
-						By <a href="http://www.mezzoblue.com/">Dave Shea</a>. Bandwidth graciously donated by
-						<a href="http://www.mediatemple.net/">mediatemple</a>. Now available:
+						By <a href="http://www.mezzoblue.com/">Dave Shea</a>. Bandwidth graciously
+						donated by <a href="http://www.mediatemple.net/">mediatemple</a>. Now
+						available:
 						<a href="http://www.amazon.com/exec/obidos/ASIN/0321303474/mezzoblue-20/"
 							>Zen Garden, the book</a
 						>.
@@ -186,36 +206,52 @@
 							<ul>
 								<li>
 									<a href="/221" class="design-name">Mid Century Modern</a> by
-									<a href="http://andrewlohman.com/" class="designer-name">Andrew Lohman</a>
+									<a href="http://andrewlohman.com/" class="designer-name"
+										>Andrew Lohman</a
+									>
 								</li>
 								<li>
 									<a href="/220" class="design-name">Garments</a> by
-									<a href="http://danielmall.com/" class="designer-name">Dan Mall</a>
+									<a href="http://danielmall.com/" class="designer-name"
+										>Dan Mall</a
+									>
 								</li>
 								<li>
 									<a href="/219" class="design-name">Steel</a>
 									by
-									<a href="http://steffen-knoeller.de" class="designer-name">Steffen Knoeller</a>
+									<a href="http://steffen-knoeller.de" class="designer-name"
+										>Steffen Knoeller</a
+									>
 								</li>
 								<li>
 									<a href="/218" class="design-name">Apothecary</a> by
-									<a href="http://trentwalton.com" class="designer-name">Trent Walton</a>
+									<a href="http://trentwalton.com" class="designer-name"
+										>Trent Walton</a
+									>
 								</li>
 								<li>
 									<a href="/217" class="design-name">Screen Filler</a> by
-									<a href="http://elliotjaystocks.com/" class="designer-name">Elliot Jay Stocks</a>
+									<a href="http://elliotjaystocks.com/" class="designer-name"
+										>Elliot Jay Stocks</a
+									>
 								</li>
 								<li>
 									<a href="/216" class="design-name">Fountain Kiss</a> by
-									<a href="http://jeremycarlson.com" class="designer-name">Jeremy Carlson</a>
+									<a href="http://jeremycarlson.com" class="designer-name"
+										>Jeremy Carlson</a
+									>
 								</li>
 								<li>
 									<a href="/215" class="design-name">A Robot Named Jimmy</a> by
-									<a href="http://meltmedia.com/" class="designer-name">meltmedia</a>
+									<a href="http://meltmedia.com/" class="designer-name"
+										>meltmedia</a
+									>
 								</li>
 								<li>
 									<a href="/214" class="design-name">Verde Moderna</a> by
-									<a href="http://www.mezzoblue.com/" class="designer-name">Dave Shea</a>
+									<a href="http://www.mezzoblue.com/" class="designer-name"
+										>Dave Shea</a
+									>
 								</li>
 							</ul>
 						</nav>
@@ -226,7 +262,9 @@
 						<nav>
 							<ul>
 								<li class="next">
-									<a href="/214/page1"> Next Designs <span class="indicator">›</span> </a>
+									<a href="/214/page1">
+										Next Designs <span class="indicator">›</span>
+									</a>
 								</li>
 								<li class="viewall">
 									<a
@@ -248,7 +286,8 @@
 									href="/214/214.css"
 									title="View the source CSS file of the currently-viewed design."
 								>
-									View This Design’s <abbr title="Cascading Style Sheets">CSS</abbr>
+									View This Design’s
+									<abbr title="Cascading Style Sheets">CSS</abbr>
 								</a>
 							</li>
 							<li class="css-resources">
