--- a/lab-02/02-CSS-excercises/css-exercise-6-font-sizes/css-ex6-em-rem.html
+++ b/lab-02/02-CSS-excercises/css-exercise-6-font-sizes/css-ex6-em-rem.html
@@ -13,6 +13,18 @@
         .list-item {
             font-size: 3em;
         }
+
+        #firstElement {
+            font-size: 100%;
+        }
+
+        #secondElement {
+            font-size: 134%;
+        }
+
+        .list-item {
+            font-size: 150%;
+        }
 		
 		/* Additional styles (not relevant for the task)*/
 		
