work on screen1

--- a/homework-01/screen1.html
+++ b/homework-01/screen1.html
@@ -9,15 +9,15 @@
 	<body>
 		<section id="flex-wrapper">
 			<section id="login">
-				<p>Flutter</p>
+				<header>Flutter</header>
 				<form id="form">
 					<legend>Login</legend>
-					<input type="email" name="email" id="email" />
-					<input type="password" name="password" id="password" />
+					<input type="email" name="email" id="email" placeholder="Email" />
+					<input type="password" name="password" id="password" placeholder="Password" />
 
-					<input type="submit" value="Submit" />
+					<input type="submit" value="Submit" id="submit-button" />
 					
-					<a href="" target="_blank">Create account</a>
+					<a href="" target="_blank" id="create-account">Create account</a>
 				</form>
 			</section>
 		</section>
