--- a/homework-01/screen1.html
+++ b/homework-01/screen1.html
@@ -14,9 +14,8 @@
 					<legend>Login</legend>
 					<input type="email" name="email" id="email" placeholder="Email" />
 					<input type="password" name="password" id="password" placeholder="Password" />
+					<input type="submit" value="Submit" id="submit-button" /><br />
 
-					<input type="submit" value="Submit" id="submit-button" />
-					
 					<a href="" target="_blank" id="create-account">Create account</a>
 				</form>
 			</section>
