--- a/homework-01/screen2.html
+++ b/homework-01/screen2.html
@@ -3,10 +3,21 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>screen2</title>
 		<link rel="stylesheet" href="style/screen2.css" />
 	</head>
 	<body>
-	
+		<section id="flex-wrapper">
+			<section id="login">
+				<header>Flutter</header>
+				<form id="form">
+					<legend>Join the community</legend>
+					<input type="text" name="username" id="username" placeholder="User Name" />
+					<input type="email" name="email" id="email" placeholder="Email" />
+					<input type="password" name="password" id="password" placeholder="Password" />
+					<input type="submit" value="Submit" id="submit-button" /><br />
+				</form>
+			</section>
+		</section>
 	</body>
 </html>
