refined search field

--- a/homework-01/screen3.html
+++ b/homework-01/screen3.html
@@ -12,7 +12,7 @@
 			<header id="heading">Flutter</header>
 			<div id="search-field-wrapper">
 				<span id="search-text">Search</span>
-				<i class="fas fa-search"></i>
+				<i id="search-icon" class="fas fa-search"></i>
 			</div>
 		</section>
 		<section id="posts-flex-wrapper">
