--- a/homework-01/register.html
+++ b/homework-01/register.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>screen2</title>
-		<link rel="stylesheet" href="style/screen2.css" />
+		<title>register</title>
+		<link rel="stylesheet" href="style/register.css" />
 	</head>
 	<body>
 		<section id="flex-wrapper">
