--- a/homework-01/feed.html
+++ b/homework-01/feed.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>screen3</title>
-		<link rel="stylesheet" href="style/screen3.css" />
+		<link rel="stylesheet" href="style/feed.css" />
 		<script src="https://kit.fontawesome.com/ad5eca15f1.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
