--- a/homework-01/login.html
+++ b/homework-01/login.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>screen1</title>
-		<link rel="stylesheet" href="style/screen1.css" />
+		<title>login</title>
+		<link rel="stylesheet" href="style/login.css" />
 	</head>
 	<body>
 		<section id="flex-wrapper">
