--- a/homework-01/login.html
+++ b/homework-01/login.html
@@ -7,18 +7,17 @@
 		<link rel="stylesheet" href="style/login.css" />
 	</head>
 	<body>
-		<section id="flex-wrapper">
+		<main>
 			<section id="login">
 				<header>Flutter</header>
-				<form id="form">
+				<form>
 					<legend>Login</legend>
 					<input type="email" name="email" id="email" placeholder="Email" />
 					<input type="password" name="password" id="password" placeholder="Password" />
-					<input type="submit" value="Submit" id="submit-button" /><br />
-
-					<a href="" target="_blank" id="create-account">Create account</a>
+					<input type="submit" value="Submit" id="submit-button" />
+					<a href="register.html" target="_blank" id="create-account">Create account</a>
 				</form>
 			</section>
-		</section>
+		</main>
 	</body>
 </html>
