--- a/homework-01/register.html
+++ b/homework-01/register.html
@@ -7,17 +7,17 @@
 		<link rel="stylesheet" href="style/register.css" />
 	</head>
 	<body>
-		<section id="flex-wrapper">
-			<section id="login">
+		<main>
+			<section id="registration">
 				<header>Flutter</header>
-				<form id="form">
+				<form>
 					<legend>Join the community</legend>
 					<input type="text" name="username" id="username" placeholder="User Name" />
 					<input type="email" name="email" id="email" placeholder="Email" />
 					<input type="password" name="password" id="password" placeholder="Password" />
-					<input type="submit" value="Submit" id="submit-button" /><br />
+					<input type="submit" value="Submit" id="submit-button" />
 				</form>
 			</section>
-		</section>
+		</main>
 	</body>
 </html>
